add ex2 lista 5

--- a/Lista-5/exe-2/style-2.css
+++ b/Lista-5/exe-2/style-2.css
@@ -1,3 +1,14 @@
 a{
     text-decoration: none;
+    font: 3em sans-serif;
+}
+a:link{
+    color: chartreuse;
+}
+a:visited{
+    color: crimson;
+}
+    
+a:hover{
+    color: aquamarine;
 }
