--- a/Lista-6/style1.css
+++ b/Lista-6/style1.css
@@ -4,73 +4,108 @@
     box-sizing: border-box;
 }
 body{
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    padding: 20px;
+    font-family: initial;
+    padding: 2%;
     display: block;
-    background-color: grey;
-    
+    background-color: black;
+    font-style:italic;
 
 }
+
 header{
-    border: 2px solid black;
-    text-align: center;
-    background-color: red;
-    padding: 5%;
+    text-align: left;
+    padding: 10%;
+    color: rgb(22, 11, 11);
+    font-size: 2rem;
+
+}
+header p{
+    color: white;
 }
 img{
-    width: 150px;
-    height: 150px;
-    border: 3px solid red;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     display: block;
     float: left;
     margin-right: 20px;
+     overflow: hidden;
+    box-shadow: 0 0 10px 4px #721f1c;
+    
 }
 .sobre{
     display: inline-block;
-    border: 2px solid black;
-    background-color: aqua;
     padding: 10%;
     padding-left: 5%;
+    border-bottom: solid;
+    border-image-slice: 0.9;  
+    border-image-source: linear-gradient(90deg, hwb(0 5% 88%), #921911, #240d0d);
+    box-shadow: #721f1c;
+    font-weight: bolder;
 
 
+}
+.sobre p{
+    color: white;
 }
 .sobre h2{
     text-align: left;
     margin-bottom: 35px;
+    color: rgb(22, 11, 11);
+    font-size: 2rem;
 }
 .habilitis{
-    border: 2px solid black;
-    background-color: purple;
     padding: 5%;
     text-align: center;
+    color: aliceblue;
+    border-bottom: solid;
+    border-image-slice: 0.9;  
+    border-image-source: linear-gradient(90deg, hwb(0 5% 88%), #921911, #240d0d);
+    
 }
 .habilitis h2{
     text-align: left;
     margin-left: 160px;
+    font-size: 2rem;
+    color: rgb(22, 11, 11);
 }
 ul li{
     list-style-type: none;
     display: inline-block;
     margin: 50px;
-    border: 2px solid black;
     border-radius: 20px;
     padding: 10px;
-    background-color: chocolate;
+    background-color: gray;
     font-size: 25px;
+    background: url(https://wallpapers.com/images/hd/1920x1080-red-wallpaper-97f2gq0vmldryjw3.jpg) no-repeat center/cover;
+    font-weight: bolder;
+    
+}
+ul li:hover{
+    box-shadow: 0 0 10px 7px #e9362f;
+    transform: scale(1.05);
+    transition: all 0.3s;
 }
 .projects{
-    border: 2px solid black;
     padding: 10%;
     padding-left: 10px;
     padding-right: 10px;
-    background-color: darkgreen;
+
+    background: url(https://wallpapers.com/images/hd/1920x1080-red-wallpaper-97f2gq0vmldryjw3.jpg) no-repeat center/cover;
+    border-bottom: solid;
+    border-image-slice: 0.9;  
+    border-image-source: linear-gradient(90deg, hwb(0 5% 88%), #921911, #240d0d);
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    
     
     
 }
 .projects h2{
     margin-left: 200px;
     margin-bottom: 30px;
+    color: white;
+    color: rgb(22, 11, 11);
+    font-size: 2rem;
 }
 article{
     padding: 10px;
@@ -78,53 +113,112 @@ article{
 }
 .projeto1{
     display: inline-block;
-    border: 2px solid black;
-    background-color: blue;
-    width: 50%;
-    padding: 40px;
+    font-style: initial;
+    width: 40%;
+    padding-top: 37px;
+    padding-bottom: 38px;
+    margin-right: 18%;
+    color: #240d0d;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 0 0 0px #771010;
+    font-weight: bolder;
+     background: url(https://wallpapers.com/images/hd/1920x1080-red-wallpaper-97f2gq0vmldryjw3.jpg) no-repeat center/cover;
     
 
 }
+.projeto1:hover{
+     box-shadow: 0 0 10px 4px #e9362f;
+    transition: all 0.3s;
+    color: #ffffff;
+}
 .projeto1 h3{
     margin-bottom: 20px;
+    
+    
 }
 .projeto2{
      display: inline-block;
-    border: 2px solid black;
-    background-color: orange;
-    width: 49%;
+    width: 40%;
     padding: 37.2px;
+    margin-left: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 0 0px #771010;
+    border-radius: 20px;
+    color: #240d0d;
+    font-weight: bolder;
+     background: url(https://wallpapers.com/images/hd/1920x1080-red-wallpaper-97f2gq0vmldryjw3.jpg) no-repeat center/cover;
+    
+    
+}
+.projeto2:hover{
+     box-shadow: 0 0 10px 4px #e9362f;
+    transition: all 0.3s;
+    color: white;
 }
 .projeto2 h3{
     margin-bottom: 20px;
 }
 .information{
-    border: solid 2px black;
+    border-bottom: solid;
+    border-image-slice: 0.9;  
+    border-image-source: linear-gradient(90deg, hwb(0 5% 88%), #921911, #240d0d);
     text-align: center;
     font-size: 2rem;
     align-content: center;
     padding: 7%;
+    color: #240d0d;
 }
+
 .information form{
     text-align: center;
     font-weight: bold;
+    
 }
 input{
-    border-radius: 5px;
+    border-radius: 20px;
     height: 30px;
+    background: #292922;
+    color: white;
+}
+input:hover{
+     box-shadow: 0 0 10px 4px #721f1c;
+    transition: all 0.3s;
+    background:#721f1c;
 }
 .button{
     width: 180px;
     font-size: 1rem;
-    border-radius: 5px;
+    border-radius: 20px;
     font-weight: bolder;
+    color:#240d0d
+
 
     
 }
+.button:hover{
+     box-shadow: 0 0 10px 4px #721f1c;
+    transition: all 0.3s;
+    background: #721f1c;
+}
 footer{
     padding: 4rem;
-    background: #000;
+     background: url(https://wallpapers.com/images/hd/1920x1080-red-wallpaper-97f2gq0vmldryjw3.jpg) no-repeat center/cover;
     text-align: center;
     color: #ffff;
     font-size: 1.2rem;
+   
+
+}
+.container{
+    background-image: linear-gradient(90deg, hwb(0 5% 88%), #921911, #240d0d);
+    border-image-slice: 0.9;
+    border-image-source: linear-gradient(90deg, hwb(0 5% 88%), #921911, #240d0d);
+    box-shadow: 0 0 10px 4px #721f1c;
+}
+.topside{
+    background: url(https://wallpapers.com/images/hd/1920x1080-red-wallpaper-97f2gq0vmldryjw3.jpg) no-repeat center/cover;
+    text-align: center;
+    
+
 }
