--- a/Lista-8/css/style.css
+++ b/Lista-8/css/style.css
@@ -1,25 +1,38 @@
 @import url(./resets.css);
 body{
+    padding-top: 100px;
     display: flex;
     flex-direction: column;
-    background-color: rgb(63, 60, 60);
-
+    background-color: gray;
+    font-family: monospace;
     
 }
 header{
-    flex: 0 100vh 0;
-    margin-bottom: 100px;
-    margin-top: 50px;
-    align-self: center;
-    border: solid;
+    justify-content: center;
+    margin-bottom: 50px;
+    width: 100%;
+    flex: 0 100vw 0;
+    border: 2px double;
     border-radius: 50px;
     padding: 2%;
     background-color: black;
     color: white;
+    position:relative;
+    z-index: 1000;
 }
-h2{
+h2, h3{
     font-size: 1rem;
-    text-wrap: wrap;
+    margin-bottom: 20px;
+    color: red;
+    
+
+}
+strong{
+    color: green;
+}
+p{
+    margin-bottom: 20px;
+    color: rgb(31, 31, 241);
 }
 .container{
     display: flex;
@@ -32,16 +45,28 @@ h2{
 ul li{
     margin-bottom:50px;
 }
+li:hover{
+    border: solid rgb(205, 9, 231);
+    transition: 0.3s;
+    padding: 10px;
+    box-shadow: 0 0 5px 4px rgb(205, 9, 231);
+    transform: translate(0, -8px)
+}
+ol li{
+    margin-bottom:50px ;
+}
 .sidebar{
+    position: sticky;
+    top: 70px;
+font-size: 0.8rem;
 flex: 0 0 200px;
 border-radius: 10px;
 padding: 18px;
-font-weight: bold;
 background-color: rgb(3, 3, 3);
 margin-top: 30px;
 color: white;
 box-shadow: 0 0 8px 0px black;
-
+border: double;
 }
 .principal-content{
     display: flex;
@@ -52,6 +77,7 @@ box-shadow: 0 0 8px 0px black;
     justify-content: center;
     width: 900px;
     padding: 30px;
+    font-size: 0.85rem;
 }
 .card{
     flex-basis: 200px;
@@ -61,10 +87,13 @@ box-shadow: 0 0 8px 0px black;
     justify-content: center;
     opacity: 1px;
     border-radius: 10px;
-    padding:10px;
+    padding:30px;
     background-color: rgb(7, 7, 7);
     color: aliceblue;
     border: 2px double;
+    justify-content: center;
+    align-self:safe;
+    align-content: center;
 
 }
 .card:hover{
@@ -74,7 +103,7 @@ box-shadow: 0 0 8px 0px black;
 }
 #first{
     flex-grow: 2;
-    flex-basis: 500px;
+    flex-basis: 350px;
     order: -1;
     
 }
@@ -82,4 +111,17 @@ box-shadow: 0 0 8px 0px black;
     flex-shrink: 0;
     order: 2;
 
+}
+.rodapé{
+     flex: 0 100vh 0;
+    text-align: end;
+    margin: 10px;
+    margin-top: 50px;
+    padding: 40px;
+    color: aliceblue;
+    background-color: black;
+    justify-content: end;
+    align-self: stretch;
+    border-radius: 50px;
+    border: double;
 }
